# neural_kernel

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  project_tree.txt  pyproject.toml  requirements.txt  ruff.toml  run.ps1  run_api.py  setup.py  smoke_attention_primitives.py  smoke_canonical_imports.py  smoke_causal_mask.py  smoke_checkpoint_save_load.py  smoke_classifier_pooling.py  smoke_cls_token.py  smoke_concat.py  smoke_cross_entropy.py  smoke_cuda_parity_core.py  smoke_cupy_backend.py  smoke_detach.py  smoke_dropout_module.py  smoke_embedding.py  smoke_file_checkpoint.py  smoke_gelu_transformer.py  smoke_getitem.py  smoke_masked_fill.py  smoke_module_dict.py  smoke_module_list.py  smoke_multihead_attention.py  smoke_norm_stack.py  smoke_optimizer_checkpoint.py  smoke_padding_mask.py  smoke_positional_encoding.py  smoke_public_api_imports.py  smoke_reduce_axis.py  (+20 more)
api/: __init__.py  config.py  dependencies.py  middleware.py  server.py
benchmarks/: __init__.py  runner.py
cognition/: __init__.py  __main__.py  lm_backend.py  memory.py  models.py  orchestrator.py
docs/: CHANGELOG.md  README.md  architecture.md  flutter_app_blueprint.md  public_api.md  testing.md
examples/: 01_linear_regression.py  02_digits_mlp.py  03_mnist_mlp.py  04_mnist_inference.py  05_mnist_cnn.py  06_mnist_cnn_inference.py  07_transformer_classifier.py  08_token_lm_generate.py  09_checkpoint_resume.py  README.md  llm_example.py
finetuning/: README.md  WSL2_SETUP.md  __init__.py  collect_dataset.py  deploy_to_ollama.sh  train_qlora.py
flutter_client/: README.md  analysis_options.yaml  pubspec.yaml
integration/: __init__.py  artifact_service.py  client_contract.py  response_mapper.py  status_mapper.py
kernel/: README.md  __init__.py  requirements.txt
llm/: FILES.txt  README.md  USAGE.md  __init__.py  anthropic_client.py  base.py  config.py  factory.py  ollama_client.py  openai_client.py
local_assistant/: SETUP.md  continue_config.json  test_ollama.py
nk_chat_app/: README.md  analysis_options.yaml  pubspec.yaml
persistence/: __init__.py  access.py  base.py  file_store.py  lifecycle.py  models.py  sqlite_store.py
rag/: __init__.py  docker-compose.yml  index_codebase.py  search.py
scripts/: prepare_code_data.py  prepare_data.py  run_project_generation.py  train_lm.py
tests/: test_activations.py  test_adaptive_pooling.py  test_api_schemas.py  test_attention.py  test_auth_api_key.py  test_auth_client_routes.py  test_auth_dependencies.py  test_autograd.py  (+83 more)
(+330 files in other folders)
