[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neural-kernel"
version = "0.1.0"
description = "A mini deep learning framework built from scratch with NumPy."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Your Name" }
]
dependencies = [
  "numpy>=1.24",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "torch>=2.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["kernel*"]

[tool.pytest.ini_options]
testpaths = ["tests", "tests_parity"]
python_files = ["test_*.py"]
addopts = "-q"

[tool.setuptools.package-data]
kernel = ["py.typed"]